syntax = "proto3";
package counter;

message CounterRequest {
    string letter = 1;
    uint32 before_number   = 2;
    uint32 dummy_one   = 3;
    uint32 dummy_two   = 4;
    repeated uint32 dummy_three   = 5;
}

message CounterResponse {
    int32 after_number = 1;
    int32 dummy_one = 2;
    int32 dummy_two = 3;
    repeated int32 dummy_three = 4;
}