syntax = "proto3";
package counter_number;

// [RINF:DART-SIGNAL]
message SmallLetter {
  string letter = 1;
}

// [RINF:RUST-SIGNAL]
message SmallNumber {
  int32 current_number = 1;
}
